--- a/lab02/lyons-bio.html
+++ b/lab02/lyons-bio.html
@@ -4,24 +4,26 @@
  
     <head>
         <meta charset="utf-8">
-        <title>Jack Rothenberg - Bio</title>
+        <title>Emily Lyons - Bio</title>
     </head>
  
     <body>
  
-        <h1>Jack Rothenberg's Biography</h1>
+        <h1>Emily Lyons' Biography</h1>
  
-        <p>Hello, my name is Jack Rothenberg. I am a <strong>Freshman at WPI</strong>.</p>
+        <p>I am a Junior majoring in Advertising with minors in Information Management and Technology and Sociology. I enjoy working collaboratively and expressing my creativity with others. This past summer I worked virtually as an Account Strategy Intern at Dotdash, a digital publishing company. I have danced almost my entire life, enjoy listening to music, spending time with my family, and going on hikes with my dog Chucky. I am an avid list maker, fashion trend watcher, and sushi enthusiast.</p>
         
         <h2>Personal Info</h2>
  
-        <p>I am an <strong>EMT</strong> and own two dogs.</p>
+        <p>Emily Lyons has been <strong>dancing almost her entire life</strong> and is passionate about ballet. She has attended numerous ballet schools including the Boston Ballet, Gelsey Kirkland Academy, and University of North Carolina School of the Arts.</p>
+
+        <p>In college, Emily is a member of DanceWorks, TNH Student Run Advertising Agency, and the Women in Technology club.</p>
  
         <ol>
-            <li>Certified EMT</li>
-            <li>Owner of 2 dogs<li>
-            <li>Knows how to cook<li>
-            <li>Very handsome</li>
+            <li>Ballet dancer</li>
+            <li>Sushi enthusiast<li>
+            <li>Avid listmaker<li>
+            <li>Loves to listen to music</li>
         </ol>
             
     <hr>
