--- a/lab02/lyons-bio.html
+++ b/lab02/lyons-bio.html
@@ -20,7 +20,7 @@
         <p>In college, Emily is a member of DanceWorks, TNH Student Run Advertising Agency, and the Women in Technology club.</p>
  
         <ol>
-            <li>Ballet dancer</li>
+            <li>Ballet dancer<li>
             <li>Sushi enthusiast<li>
             <li>Avid listmaker<li>
             <li>Loves to listen to music</li>
