--- a/lab02/lyons-bio.html
+++ b/lab02/lyons-bio.html
@@ -20,11 +20,10 @@
         <p>In college, Emily is a member of DanceWorks, TNH Student Run Advertising Agency, and the Women in Technology club.</p>
  
         <ol>
-            <li>Ballet dancer<li>
-            <li>Sushi enthusiast<li>
-            <li>Avid listmaker<li>
-            <li>Loves to listen to music</li>
-        </ol>
+            <li>Avid List Maker</li>
+            </li>Enjoys listening to Apple Music</li>
+            </ol>
+            
             
     <hr>
     &copy; 2020
