--- a/lab02/lyons-bio.html
+++ b/lab02/lyons-bio.html
@@ -19,11 +19,12 @@
 
         <p>In college, Emily is a member of DanceWorks, TNH Student Run Advertising Agency, and the Women in Technology club.</p>
  
-        <ol>
-            <li>Avid List Maker</li>
-            </li>Enjoys listening to Apple Music</li>
-            </ol>
-            
+        <ul>
+            <li>Ballet dancer<li>
+            <li>Sushi enthusiast<li>
+            <li>Avid listmaker<li>
+            <li>Loves to listen to music</li>
+        </ul>
             
     <hr>
     &copy; 2020
